# Guess-Number

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Data.h  Game.h  Player.h  m_rand.h
src/: CMakeLists.txt  Data.cpp  Game.cpp  Player.cpp  m_rand.cpp  main.cpp
